--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,10 @@
     <color name="nav_function_bg">#E6E6E6</color>
     <color name="nav_im_other_bg">#F2F2F2</color>
     <color name="nav_font_green_bg">#B4DD6E</color>
+    <color name="nav_green_btn">#B7DD76</color>
+    <color name="nav_red_btn">#CE482D</color>
+    <color name="nav_red_select_btn">#925042</color>
+    <color name="nav_green_select_btn">#879A66</color>
 
     <color name="nav_hint_bg">#999999</color>
     <color name="nav_text_bg">#424242</color>
