--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,7 +25,7 @@
     <color name="nav_font_green_bg">#B4DD6E</color>
     <color name="nav_green_btn">#B7DD76</color>
     <color name="nav_red_btn">#CE482D</color>
-    <color name="nav_red_select_btn">#925042</color>
+    <color name="nav_red_select_btn">#879A66</color>
     <color name="nav_green_select_btn">#879A66</color>
 
     <color name="nav_hint_bg">#999999</color>
