--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -13,7 +13,7 @@
         android:background="@color/nav_view_bg">
 
         <RelativeLayout
-            android:id="@+id/cancel"
+            android:id="@+id/cancel_layout"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true">
@@ -38,12 +38,14 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="8dp"
-            android:layout_toLeftOf="@+id/cancel"
+            android:layout_toLeftOf="@+id/cancel_layout"
             android:background="@drawable/style_white_button1"
             android:drawableLeft="@drawable/input_clear"
             android:drawablePadding="5dp"
             android:gravity="center_vertical"
             android:paddingLeft="15dp"
+            android:paddingRight="30dp"
+            android:singleLine="true"
             android:text=""
             android:textColor="@color/black"
             android:textCursorDrawable="@null"
@@ -54,11 +56,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
-            android:layout_toLeftOf="@+id/cancel"
+            android:layout_marginRight="20dp"
+            android:layout_toLeftOf="@+id/cancel_layout"
             android:background="@null"
             android:contentDescription=" "
-            android:src="@drawable/input_clear"
+            android:src="@drawable/icon_clear"
             android:visibility="visible" />
 
     </RelativeLayout>
