--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,6 +36,7 @@
     <color name="radarBgColor">#EFEFEF</color>
 
     <color name="nav_bg_center_line">#c9c9c9</color>
+    <color name="nav_bg_line">#868686</color>
 
     <color name="nav_bg_dashboard">#f8f8f8</color>
     <color name="nav_bg_night_dashboard">#222426</color>
