--- a/app/src/main/res/layout/activity_ranklist.xml
+++ b/app/src/main/res/layout/activity_ranklist.xml
@@ -260,10 +260,10 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <ListView
+    <com.hatcher.app.view.RefreshListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/top3_info_layout"
         android:background="@null"
         android:layout_marginTop="5dp"
