--- a/app/src/main/res/layout/activity_company_apply.xml
+++ b/app/src/main/res/layout/activity_company_apply.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="申请团队"
+            android:text="申请公司"
             android:textColor="@color/white"
             android:textSize="20dp" />
 
@@ -94,7 +94,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/my_team_icon"
-            android:text="上传团队图标"
+            android:text="上传公司图标"
             android:textColor="@color/black"
             android:textSize="16dp" />
 
@@ -128,7 +128,7 @@
             android:layout_centerVertical="true"
             android:background="@null"
             android:gravity="center_vertical"
-            android:hint="请输入团队所属行业"
+            android:hint="请输入公司所属行业"
             android:paddingBottom="5dp"
             android:paddingLeft="20dp"
             android:paddingRight="30dp"
@@ -168,7 +168,7 @@
             android:layout_centerVertical="true"
             android:background="@null"
             android:gravity="center_vertical"
-            android:hint="请输入团队名称，2-15字"
+            android:hint="请输入公司名称，2-15字"
             android:paddingBottom="5dp"
             android:paddingLeft="20dp"
             android:paddingRight="30dp"
@@ -210,7 +210,7 @@
             android:layout_centerVertical="true"
             android:background="@null"
             android:gravity="top|left"
-            android:hint="请输入团队介绍，0-200字"
+            android:hint="请输入公司介绍，0-200字"
             android:paddingBottom="15dp"
             android:paddingLeft="20dp"
             android:paddingRight="30dp"
