--- a/app/src/main/res/layout/activity_companyinfo.xml
+++ b/app/src/main/res/layout/activity_companyinfo.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/company_main_layout"
+    android:id="@+id/team_main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/nav_function_bg">
+    android:background="@color/nav_im_other_bg">
 
     <RelativeLayout
         android:id="@+id/title_layout"
@@ -12,13 +12,14 @@
         android:layout_alignParentTop="true"
         android:background="@color/nav_view_bg">
 
-        <ImageView
-            android:id="@+id/title_image"
-            android:layout_width="80dp"
-            android:layout_height="40dp"
+        <TextView
+            android:id="@+id/title_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/login_icon" />
+            android:text="公司名称"
+            android:textColor="@color/white"
+            android:textSize="20dp" />
 
         <RelativeLayout
             android:id="@+id/back_layout"
@@ -42,7 +43,7 @@
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:visibility="gone">
+            >
 
             <ImageView
                 android:id="@+id/search"
@@ -73,9 +74,9 @@
     </RelativeLayout>
 
     <FrameLayout
-        android:id="@+id/company_info_layout"
+        android:id="@+id/team_info_layout"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="180dp"
         android:layout_below="@+id/title_layout"
         android:background="@null"
         android:clickable="true">
@@ -93,78 +94,92 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal">
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@+id/header">
-
-                <TextView
-                    android:id="@+id/my_info_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:includeFontPadding="false"
-                    android:singleLine="true"
-                    android:text="正大光明"
-                    android:textColor="@color/white"
-                    android:textSize="13dp" />
-
-                <TextView
-                    android:id="@+id/my_des_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/my_info_text"
-                    android:layout_marginTop="3dp"
-                    android:ellipsize="end"
-                    android:includeFontPadding="false"
-                    android:singleLine="true"
-                    android:text="账号：123456789"
-                    android:textColor="@color/white"
-                    android:textSize="10dp" />
-            </RelativeLayout>
-
-            <com.hatcher.app.view.RoundImageView
-                android:id="@+id/header"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_centerVertical="true"
+            <ImageView
+                android:id="@+id/play"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_centerInParent="true"
                 android:layout_marginLeft="20dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/login_bg" />
+                android:src="@drawable/selector_play" />
         </RelativeLayout>
     </FrameLayout>
 
     <RelativeLayout
-        android:id="@+id/company_title_layout"
+        android:id="@+id/team_layout"
         android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:layout_below="@+id/company_info_layout">
+        android:layout_height="65dp"
+        android:layout_below="@+id/team_info_layout"
+        android:background="@color/white"
+        android:layout_marginTop="10dp">
 
-        <TextView
-            android:id="@+id/company_title_text"
+        <ImageView
+            android:id="@+id/check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/selector_check" />
+
+        <com.hatcher.app.view.RoundImageView
+            android:id="@+id/header"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/login_logo" />
+
+        <TextView
+            android:id="@+id/team_info_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_toLeftOf="@+id/check"
+            android:layout_toRightOf="@+id/header"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:text=""
+            android:textColor="@color/nav_gray_bg"
+            android:textSize="12dp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/team_title_layout"
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:background="@color/white"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/team_layout">
+
+        <TextView
+            android:id="@+id/team_title_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
             android:ellipsize="end"
             android:includeFontPadding="false"
             android:singleLine="true"
-            android:text="企业主页"
+            android:text="公司成员"
             android:textColor="@color/nav_text_color"
             android:textSize="15dp" />
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/company_photo_layout"
+        android:id="@+id/team_photo_layout"
         android:layout_width="match_parent"
         android:layout_height="84dp"
-        android:layout_below="@+id/company_title_layout"
-        android:background="@color/white">
+        android:layout_below="@+id/team_title_layout"
+        android:background="@color/nav_im_other_bg">
 
         <RelativeLayout
-            android:id="@+id/company_photodata_layout"
+            android:id="@+id/team_photodata_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
@@ -176,72 +191,39 @@
                 android:layout_height="match_parent"
                 android:numColumns="5"
                 android:background="@null"
+                android:layout_toLeftOf="@+id/more"
+                android:layout_marginRight="10dp"
                 android:stretchMode="columnWidth" />
+
+            <ImageView
+                android:id="@+id/more"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/selector_more" />
 
         </RelativeLayout>
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/company_location_layout"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_below="@+id/company_photo_layout"
-        android:layout_marginTop="15dp"
-        android:background="@color/white">
+    <ImageView
+        android:id="@+id/team_talk_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/team_photo_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/selector_talk"
+       />
 
-        <TextView
-            android:id="@+id/company_location_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:ellipsize="end"
-            android:includeFontPadding="false"
-            android:singleLine="true"
-            android:text="所在地区"
-            android:textColor="@color/nav_text_color"
-            android:textSize="15dp" />
-
-        <TextView
-            android:id="@+id/company_location_msg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:layout_toRightOf="@+id/company_location_text"
-            android:ellipsize="end"
-            android:includeFontPadding="false"
-            android:singleLine="true"
-            android:text="辽宁沈阳"
-            android:textColor="@color/black"
-            android:textSize="12dp" />
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/send_msg_btn"
+    <ImageView
+        android:id="@+id/team_join_btn"
         android:layout_width="240dp"
         android:layout_height="32dp"
-        android:layout_below="@+id/company_location_layout"
+        android:layout_below="@+id/team_talk_btn"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp"
-        android:background="@drawable/selector_btn_green"
-        android:gravity="center"
-        android:includeFontPadding="false"
-        android:text="发 消 息"
-        android:textColor="@color/white"
-        android:textSize="15dp" />
-
-    <TextView
-        android:id="@+id/add_friend_btn"
-        android:layout_width="240dp"
-        android:layout_height="32dp"
-        android:layout_below="@+id/send_msg_btn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/selector_btn_red"
-        android:gravity="center"
-        android:includeFontPadding="false"
-        android:text="加 关 注"
-        android:textColor="@color/white"
-        android:textSize="15dp" />
+        android:layout_marginTop="20dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/selector_join"/>
 </RelativeLayout>
