--- a/app/src/main/res/layout/activity_ranklist.xml
+++ b/app/src/main/res/layout/activity_ranklist.xml
@@ -165,7 +165,7 @@
     <LinearLayout
         android:id="@+id/top3_info_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_below="@+id/rank_top3_layout"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -175,6 +175,7 @@
             android:id="@+id/layout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1">
 
             <TextView
@@ -204,6 +205,7 @@
             android:id="@+id/layout1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1">
 
             <TextView
@@ -233,6 +235,7 @@
             android:id="@+id/layout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1">
 
             <TextView
@@ -263,7 +266,7 @@
     <com.hatcher.app.view.RefreshListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/top3_info_layout"
         android:background="@null"
         android:layout_marginTop="5dp"
