--- a/app/src/main/res/color/tab_main_selector.xml
+++ b/app/src/main/res/color/tab_main_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_selected="true" android:color="@color/nav_blue_bg"/>
-    <item android:color="@color/nav_gray_bg"/>
+    <item android:state_selected="true" android:color="@color/nav_green_btn"/>
+    <item android:color="@color/white"/>
 
 </selector>
