--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -39,18 +39,18 @@
 
         <RelativeLayout
             android:id="@+id/search_layout"
-            android:layout_width="40dp"
+            android:layout_width="70dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true">
 
             <ImageView
                 android:id="@+id/search"
-                android:layout_width="25dp"
+                android:layout_width="50dp"
                 android:layout_height="25dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/icon_search" />
+                android:src="@drawable/icon_release" />
         </RelativeLayout>
 
         <RelativeLayout
