--- a/app/src/main/res/layout/activity_modifypassword.xml
+++ b/app/src/main/res/layout/activity_modifypassword.xml
@@ -133,7 +133,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="10dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/login_bg" />
+                android:src="@drawable/default_header" />
 
         </RelativeLayout>
 
