--- a/app/src/main/res/layout/activity_recomment.xml
+++ b/app/src/main/res/layout/activity_recomment.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/my_main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/nav_function_bg">
+    android:background="@color/nav_function_bg" >
 
     <RelativeLayout
         android:id="@+id/title_layout"
@@ -12,13 +11,12 @@
         android:layout_alignParentTop="true"
         android:background="@color/nav_view_bg">
 
-
         <TextView
             android:id="@+id/title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="公司动态"
+            android:text="发表评论"
             android:textColor="@color/white"
             android:textSize="20dp" />
 
@@ -41,58 +39,54 @@
 
         <RelativeLayout
             android:id="@+id/search_layout"
-            android:layout_width="40dp"
+            android:layout_width="70dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true">
 
             <ImageView
                 android:id="@+id/search"
+                android:layout_width="50dp"
+                android:layout_height="25dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/icon_send_comment" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/contacts_layout"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@+id/search_layout"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/contacts"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/icon_search" />
+                android:src="@drawable/icon_contacts" />
         </RelativeLayout>
 
     </RelativeLayout>
 
-    <FrameLayout
-        android:id="@+id/my_layout"
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
+    <EditText
+        android:id="@+id/edit_text"
+        android:layout_width="fill_parent"
+        android:layout_height="200dp"
         android:layout_below="@+id/title_layout"
-        android:background="@null"
-        android:clickable="true">
-
-        <ImageView
-            android:id="@+id/my_image_bg"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/login_bg" />
-
-        <com.hatcher.app.view.RoundImageView
-            android:id="@+id/team_icon"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
-            android:scaleType="fitCenter"
-            android:layout_gravity="bottom|right"
-            android:layout_margin="20dp"
-            android:src="@drawable/default_header" />
-    </FrameLayout>
-
-    <com.hatcher.app.view.RefreshListView
-        android:id="@+id/list_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/my_layout"
-        android:background="@null"
-        android:divider="@null"
-        android:dividerHeight="0px"
-        android:scrollbarAlwaysDrawVerticalTrack="true"
-        android:scrollbarSize="2dp"
-        android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
-        android:scrollbarTrackVertical="@null" />
+        android:background="@color/white"
+        android:layout_marginTop="10dp"
+        android:gravity="left|top"
+        android:hint="写评论.."
+        android:textColorHint="@color/nav_text_gray"
+        android:inputType="text"
+        android:padding="15dp"
+        android:cursorVisible="true"
+        android:textCursorDrawable="@null"
+        android:textColor="@color/black" >
+    </EditText>
 
 </RelativeLayout>
