--- a/app/src/main/res/layout/activity_settingmain.xml
+++ b/app/src/main/res/layout/activity_settingmain.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/my_main_layout"
+    android:id="@+id/im_main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/nav_function_bg">
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="公司设置"
+            android:text="我的设置"
             android:textColor="@color/white"
             android:textSize="20dp" />
 
@@ -41,9 +41,9 @@
         <RelativeLayout
             android:id="@+id/search_layout"
             android:layout_width="40dp"
-            android:visibility="gone"
             android:layout_height="match_parent"
-            android:layout_alignParentRight="true">
+            android:layout_alignParentRight="true"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/search"
@@ -55,30 +55,49 @@
                 android:src="@drawable/icon_search" />
         </RelativeLayout>
 
+        <RelativeLayout
+            android:id="@+id/contacts_layout"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@+id/search_layout"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/contacts"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/icon_contacts" />
+        </RelativeLayout>
+
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/my_team_layout"
+        android:id="@+id/my_page_layout"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_below="@+id/title_layout"
         android:layout_marginTop="10dp"
         android:background="@color/white"
         android:clickable="true"
         android:gravity="center_vertical">
 
-        <com.hatcher.app.view.RoundImageView
-            android:id="@+id/my_team_icon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+        <ImageView
+            android:id="@+id/my_page_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:scaleType="fitXY"
-            android:src="@drawable/default_header"
-            />
+            android:src="@drawable/icon_enter"
+            android:visibility="gone" />
 
         <ImageView
-            android:id="@+id/my_team_right"
+            android:id="@+id/my_page_right"
             android:layout_width="14dp"
             android:layout_height="28dp"
             android:layout_alignParentRight="true"
@@ -88,13 +107,13 @@
             android:src="@drawable/icon_enter" />
 
         <TextView
-            android:id="@+id/my_team_text"
+            android:id="@+id/my_page_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/my_team_icon"
-            android:text="上传公司图标"
+            android:layout_marginLeft="30dp"
+            android:layout_toRightOf="@+id/my_page_icon"
+            android:text="密码设置"
             android:textColor="@color/black"
             android:textSize="16dp" />
 
@@ -112,126 +131,47 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/my_video_layout"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_below="@+id/my_team_layout"
-        android:layout_marginTop="10dp"
-        android:background="@color/white"
-        android:clickable="true"
-        android:gravity="center_vertical">
-
-        <com.hatcher.app.view.RoundImageView
-            android:id="@+id/my_video_icon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/default_header"
-            />
-
-        <ImageView
-            android:id="@+id/my_video_right"
-            android:layout_width="14dp"
-            android:layout_height="28dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="30dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/icon_enter" />
-
-        <TextView
-            android:id="@+id/my_video_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/my_video_icon"
-            android:text="上传公司视频"
-            android:textColor="@color/black"
-            android:textSize="16dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0.5px"
-            android:layout_alignParentBottom="true"
-            android:background="@color/nav_line_gray" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0.5px"
-            android:layout_alignParentTop="true"
-            android:background="@color/nav_line_gray" />
-    </RelativeLayout>
-       <RelativeLayout
-        android:id="@+id/my_email_layout"
+        android:id="@+id/my_photo_layout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_below="@+id/my_video_layout"
+        android:layout_below="@+id/my_page_layout"
         android:layout_marginTop="10dp"
         android:background="@color/white"
         android:clickable="true"
         android:gravity="center_vertical">
 
-        <EditText
-            android:id="@+id/email_edit"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <ImageView
+            android:id="@+id/my_photo_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
-            android:background="@null"
-            android:gravity="center_vertical"
-            android:hint="请输入企业邮箱"
-            android:paddingBottom="5dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="30dp"
-            android:paddingTop="5dp"
-            android:singleLine="true"
-            android:inputType="textEmailAddress"
-            android:text=""
-            android:textColor="@color/black"
-            android:textSize="18dp" />
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/icon_enter"
+            android:visibility="gone" />
 
+        <ImageView
+            android:id="@+id/my_photo_right"
+            android:layout_width="14dp"
+            android:layout_height="28dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="30dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/icon_enter" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0.5px"
-            android:layout_alignParentBottom="true"
-            android:background="@color/nav_line_gray" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0.5px"
-            android:layout_alignParentTop="true"
-            android:background="@color/nav_line_gray" />
-    </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/my_introduce_layout"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_below="@+id/my_email_layout"
-        android:layout_marginTop="10dp"
-        android:background="@color/white"
-        android:clickable="true"
-        android:gravity="center_vertical">
-
-        <EditText
-            android:id="@+id/introduce_edit"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:id="@+id/my_photo_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:background="@null"
-            android:gravity="top|left"
-            android:hint="请输入公司介绍，0-200字"
-            android:paddingBottom="15dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="30dp"
-            android:paddingTop="15dp"
-            android:maxLength="200"
-            android:text=""
+            android:layout_marginLeft="30dp"
+            android:layout_toRightOf="@+id/my_photo_icon"
+            android:text="版本更新"
             android:textColor="@color/black"
-            android:textSize="18dp" />
-
+            android:textSize="16dp" />
 
         <TextView
             android:layout_width="match_parent"
