--- a/app/src/main/res/layout/activity_team_setting.xml
+++ b/app/src/main/res/layout/activity_team_setting.xml
@@ -74,7 +74,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
             android:scaleType="fitXY"
-            android:src="@drawable/login_logo"
+            android:src="@drawable/default_header"
             />
 
         <ImageView
@@ -128,7 +128,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
             android:scaleType="fitXY"
-            android:src="@drawable/login_logo"
+            android:src="@drawable/default_header"
             />
 
         <ImageView
