--- a/app/src/main/res/layout/item_friend_list.xml
+++ b/app/src/main/res/layout/item_friend_list.xml
@@ -54,6 +54,6 @@
             android:layout_height="56dp"
             android:layout_centerVertical="true"
             android:scaleType="fitXY"
-            android:src="@drawable/login_bg" />
+            android:src="@drawable/default_header" />
     </FrameLayout>
 </RelativeLayout>
