--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -77,7 +77,7 @@
         android:layout_gravity="center_horizontal|top"
         android:layout_marginTop="10dp"
         android:scaleType="fitXY"
-        android:src="@drawable/login_bg" />
+        android:src="@drawable/default_header" />
 
     <RelativeLayout
         android:id="@+id/down_info_layout"
@@ -97,6 +97,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/layout1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -120,6 +121,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -142,6 +144,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
