--- a/app/src/main/res/layout/item_im_main_list.xml
+++ b/app/src/main/res/layout/item_im_main_list.xml
@@ -19,7 +19,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:scaleType="fitXY"
-            android:src="@drawable/login_bg" />
+            android:src="@drawable/default_header" />
         <RelativeLayout
             android:id="@+id/my_info_layout"
             android:layout_width="wrap_content"
